Need to fix the alignment of the next pieces

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -51,7 +51,7 @@ canvas {
   display: inline-block;
   vertical-align:top;
   padding: 5px;
-  font-size: 20px;
+  font-size: 30px;
   border: 1px black solid;
 }
 
@@ -59,6 +59,9 @@ canvas {
   display: inline-block;
   vertical-align:top;
   padding: 5px;
+  width: 250px;
+  height: 200px;
+  align-items: center;
 }
 
 #tetrisBoard {
@@ -76,8 +79,23 @@ canvas {
 #nextPieces {
   display: inline-block;
   vertical-align:top;
+  /* align-self: center;
+  align-content: center;
+  align-items: center;
+  align: center; */
   padding: 5px;
   border: 1px black solid;
+}
+
+#nextPieces > img {
+  display: block;
+  /* align-self: center;
+  align-content: center;
+  align-items: center;
+  align: center; */
+  padding: 10px;
+  width: 50px;
+  height: 50px;
 }
 
 #scoreDiv {
